# memlayer

./: .gitignore  API.md  ARCHITECTURE.md  ARCHITECTURE_STEP2_SUMMARY.md  CHECKLIST.md  DEVELOPER_QUICK_REFERENCE.md  DEVELOPMENT.md  INDEX.md  QUICKSTART.md  README.md  REPOSITORY_INSPECTION_SUMMARY.md  STEP2_IMPLEMENTATION_STATUS.md  SUMMARY.md  docker-compose.yml
memlayer-backend/: .env.example  CURRENT_STATE_ANALYSIS.md  Dockerfile  PHASE10_COMPLETION_REPORT.md  PHASE10_GOVERNANCE_OBSERVABILITY.md  PHASE4_SUMMARY.md  PHASE5B_COMPLETION.md  PHASE5B_PROGRESS.md  PHASE5_PROGRESS.md  PHASE65_CROSS_LAYER_EVALUATION.md  PHASE6_VIEW_ENGINE_ARCHITECTURE.md  evaluate_locomo.py  init_db.py  production.env.template  pyproject.toml  render.yaml  requirements.txt
memlayer-backend/app/: main.py
memlayer-backend/scripts/: fast_populate.py  populate_locomo_production.py  quick_locomo_test.py
memlayer-backend/tests/: benchmark_adaptive_compilation.py  benchmark_context_compression.py  benchmark_phase5.py  benchmark_semantic_chunking.py  benchmark_semantic_deduplication.py  stress_concurrency_runtime.py  stress_locomo_runtime.py  test_adaptive_assembly_pipeline.py  test_adaptive_compilation.py  test_context_compression.py  test_coordination_intelligence.py  test_cross_layer_evaluation.py  test_dataset_generator.py  test_deployment_infrastructure.py  test_evolution_tracker.py  test_governance.py  test_governance_benchmarks.py  test_phase5b_runtime.py  test_regression_comparison.py  test_regression_comparison_extensions.py  test_regression_suite.py  test_sdk_api.py  test_telemetry.py  (+11 more)
(+315 files in other folders)
